fix(layout): unify section left margin with Home and fix content alignment

--- a/src/components/Career/index.scss
+++ b/src/components/Career/index.scss
@@ -1,7 +1,8 @@
 .career-page {
-  padding-left: 100px;
+  padding-left: 10%;
   padding-right: 50px;
-  width: calc(100% - 150px);
+  width: 100%;
+  box-sizing: border-box;
   position: initial;
   height: 100%;
   overflow: auto;
@@ -17,7 +18,6 @@
   }
 
   h1.page-title {
-    margin-left: 100px;
     margin-top: 100px;
   }
 
