--- a/src/components/PaperShelf/index.scss
+++ b/src/components/PaperShelf/index.scss
@@ -1,7 +1,8 @@
 .paper-shelf-page {
-  padding-left: 100px;
+  padding-left: 10%;
   padding-right: 50px;
-  width: calc(100% - 150px);
+  width: 100%;
+  box-sizing: border-box;
   position: initial;
   height: 100%;
   overflow: auto;
@@ -17,7 +18,6 @@
   }
 
   h1.page-title {
-    margin-left: 100px;
     margin-top: 100px;
   }
 
@@ -84,6 +84,7 @@
     width: 100%;
     height: 100%;
     object-fit: contain;
+    top: 0;
     left: 0;
   }
 
