--- a/src/components/Skills/index.scss
+++ b/src/components/Skills/index.scss
@@ -1,7 +1,8 @@
 .skills-page {
-  padding-left: 100px;
+  padding-left: 10%;
   padding-right: 50px;
-  width: calc(100% - 150px);
+  width: 100%;
+  box-sizing: border-box;
   position: initial;
   height: 100%;
   overflow: auto;
@@ -17,7 +18,6 @@
   }
 
   h1.page-title {
-    margin-left: 100px;
     margin-top: 100px;
   }
 
@@ -29,7 +29,6 @@
   grid-template-columns: repeat(3, 1fr);
   gap: 20px;
   padding-bottom: 100px;
-  margin-left: 100px;
 }
 
 .skill-card {
